src/objects/FSTR__PCE_Definition_Criteria__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object allows the user to specify criteria to link this definition to the parent object.  This is in addition to record type that was selected.</description>
    <fields>
        <fullName>FSTR__DataType__c</fullName>
        <label>DataType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Joining_Operator__c</fullName>
        <inlineHelpText>If there are multiple definition criteria values this field indicates how this value is combined with the other values</inlineHelpText>
        <label>Joining Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Lookup_Name__c</fullName>
        <description>If criteria is a lookup criteria to another record, this field will store the name of the record looked up to while Field_value__c stores the Id.</description>
        <label>Lookup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition__c</fullName>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Definition Criteria</relationshipLabel>
        <relationshipName>PCE_Definition_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Definition Criteria</label>
    <nameField>
        <displayFormat>PCEDC-{0000000}</displayFormat>
        <label>Definition Criteria  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Definition Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>